# world-arcade

./: .dockerignore  .gitignore  Dockerfile.server  README.md  docker-compose.yaml  dweam-metadata-schema.json  generate_assets.py  main.py  pyproject.toml  turnserver.conf
.github/workflows/: build-windows.yml
dweam/: __init__.py  commands.py  constants.py  game.py  game_process.py  log_config.py  models.py  server.py  worker.py
dweam/scripts/: generate_thumbnails.py  serve.py
dweam/utils/: entrypoint.py  process.py  turn.py  venv.py
dweam_web/: .dockerignore  Dockerfile  README.md  astro.config.ts  package-lock.json  package.json  pnpm-lock.yaml
dweam_web/public/thumbnails/: diamond_Alien.webm  diamond_Amidar.webm  diamond_Assault.webm  diamond_Asterix.webm  diamond_BankHeist.webm  diamond_BattleZone.webm  diamond_Boxing.webm  diamond_Breakout.webm  diamond_ChopperCommand.webm  diamond_CrazyClimber.webm  diamond_DemonAttack.webm  diamond_Freeway.webm  diamond_Frostbite.webm  diamond_Gopher.webm  diamond_Hero.webm  diamond_Jamesbond.webm  diamond_Kangaroo.webm  diamond_Krull.webm  diamond_KungFuMaster.webm  diamond_MsPacman.webm  diamond_Pong.webm  diamond_PrivateEye.webm  diamond_Qbert.webm  diamond_RoadRunner.webm  diamond_Seaquest.webm  diamond_UpNDown.webm  diamond_csgo.webm  lucid_minecraft.webm
dweam_web/src/: config.yaml  env.d.ts  navigation.ts
dweam_web/src/components/: EnvInjector.astro  Favicons.astro  constants.ts
dweam_web/src/components/dweam/: GameCarousel.astro  GameCarousel.css  GameCarouselReact.tsx  (+10 more)
dweam_web/src/layouts/: Layout.astro  PageLayout.astro
dweam_web/src/lib/: api.ts
dweam_web/src/pages/: game.astro  index.astro
dweam_web/src/stores/: gameStore.ts
(+2 files in other folders)
