[tool.poetry]
name = "dweam"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
aiortc = "^1.9.0"
av = "<13.0.0"
pygame = "^2.5.2"
aiohttp = "^3.10.10"
numpy = "^1.26.0"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
ale-py = { git = "https://github.com/Farama-Foundation/Arcade-Learning-Environment", tag = "v0.8.1" }
pyyaml = "^6.0.2"
structlog = "^24.4.0"

# Add more games here!
diamond_atari = { git = "https://github.com/dweam-team/diamond", branch = "main" }
diamond_csgo = { git = "https://github.com/dweam-team/diamond", branch = "csgo" }
lucid_v1 = { git = "https://github.com/dweam-team/lucid-v1", branch = "master" }

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.389"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
