[tool.poetry]
name = "dweam"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
aiortc = "^1.9.0"
av = "<13.0.0"
pygame = "^2.5.2"
aiohttp = "^3.10.10"
numpy = "^1.26.0"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
pyyaml = "^6.0.2"
structlog = "^24.4.0"
pywebview = { version = "^4.4.1", optional = true }
requests = "^2.32.3"
tomli = { version = "^2.2.1", python = "<3.11" }
packaging = "^24.2"

[tool.poetry.extras]
local = ["pywebview"]  # Dependencies needed for local desktop app

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.389"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
